# nrf_temperature

./: Cargo.toml  Embed.toml  Makefile  memory.x
.cargo/: config
src/: main.rs
