[package]
name = "nrf_temperature"
version = "0.1.0"
authors = ["Yuri Volkov <volkov.yuri.alex@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
nb = "1.1.0"
rtt-target = "0.4.0"
nrf51-hal = "0.16.0"
ssd1309 = "0.3.0"
embedded-graphics = "0.8.0"


[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
